@@ -37,6 +37,7 @@
         <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
         <woodstox-core.version>5.3.0</woodstox-core.version>
         <spring-webmvc.version>5.3.22</spring-webmvc.version>
+        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
     </properties>
 
     <dependencyManagement>
@@ -141,6 +142,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
         </dependency>
 
         <!--explicitly load latest compatible version with security fix in it-->
@@ -218,7 +220,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.3</version>
+                <version>0.8.10</version>
                 <executions>
                     <execution>
                         <goals>
